# TicklingVMProtect

./: CMakeLists.txt  README.md  setup.py
Helpers/: CMakeLists.txt
Helpers/VMProtect/: CMakeLists.txt  VMProtectHelpers.cpp  compile_windows.bat
Lifter/: CMakeLists.txt  main.cpp
Results/: RandomEMPFunc2.ll
WhitePeacock/: CMakeLists.txt
WhitePeacock/include/Explorer/: Explorer.hpp
WhitePeacock/include/Lifter/: Lifter.hpp
WhitePeacock/include/Optimizer/: Optimizer.hpp
WhitePeacock/include/Passes/: InstCombineGenericPass.hpp  SegmentsAAPass.hpp
WhitePeacock/include/Snapshot/: Snapshot.hpp
WhitePeacock/include/Streams/: BasicBlock.hpp  BasicBlockStream.hpp  BinaryParserStream.hpp  FileParserStream.hpp
WhitePeacock/include/Symbolizer/: Symbolizer.hpp
WhitePeacock/include/Synthesis/: EnumerativeSynthesis.hpp  SolverCache.hpp
WhitePeacock/include/Translator/: CFGStructures.hpp  SVMTranslator.hpp
WhitePeacock/include/Utilities/: LLVMGlobalContext.hpp  Utility.hpp
WhitePeacock/src/Explorer/: Explorer.cpp
WhitePeacock/src/Lifter/: Lifter.cpp
WhitePeacock/src/Optimizer/: Optimizer.cpp
WhitePeacock/src/Passes/: ConstantConcretizationPass.cpp  InstCombineGenericPass.cpp  PointersHoistPass.cpp  SegmentsAAPass.cpp  SynthesizeFlagsPass.cpp
WhitePeacock/src/Snapshot/: Snapshot.cpp
WhitePeacock/src/Streams/: BinaryParserStream.cpp  FileParserStream.cpp
WhitePeacock/src/Symbolizer/: Symbolizer.cpp
WhitePeacock/src/Synthesis/: EnumerativeSynthesis.cpp  SolverCache.cpp
WhitePeacock/src/Translator/: SVMTranslator.cpp
WhitePeacock/src/Utilities/: Utility.cpp
